Fix typo in venue name in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   2025.06 Hotelier, Porto<br>
   2025.11 casa da Firoozeh Sol, Vila Real<br>
   2025.12 Radioclube Agramonte, Porto<br>
-  2025.12 Cru, Famaliçãol<br>
+  2025.12 Cru, Famalição<br>
   2025.12 Fritarias, Amaparo, Porto
 </p>
 
