Update link for camera recording reference

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     </span>
 
   2025.11 casa da Firoozeh Sol, Vila Real<br>
-     <span class="link-line">
-      <p>camera didn't record</p>
-    </span>
+      <span class="link-line">
+      <a href="https://www.youtube.com/watch?v=36JI7YBuRKM&feature=youtu.be" target="_blank">camera didn't record</a>
+      </span>
   
   2025.12 Radioclube Agramonte, Porto<br>
       <details>
       <summary>fotografias</summary>
-      <img src="images/hotelier-1.jpg" alt="Hotelier, Porto">
+      <img src="images/rca1.jpg" alt="rca1, Porto">
     </details>
   
   2025.12 Cru, Famalição<br>
