--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   <title>the first time you saw a butterfly</title>
     <style>
     body {
-      font-family: sans-serif;
+      margin: 40px;
+      background-color: #f7f7f5;
+      color: #222222;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      line-height: 1.6;
     }
     .link-line {
       display: block;
+      margin-top: 2px;
       margin-left: 20px;
       font-size: 0.9rem;
     }
