--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   2025.12 event : fritarias // venue : amparo // city : porto<br>
         <details>
       <summary>fotografias</summary>
-        <img src="images/amparo1.jpg" alt="amparo1, Porto">
+        <img src="images/amparo1.1.png" alt="amparo1, Porto">
         <img src="images/amparo2.jpg" alt="amparo2, Porto">
         <img src="images/amparo5.jpg" alt="amparo5, Porto">
         <img src="images/amparo6.jpg" alt="amparo6, Porto">
