--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
   
 <p>
   2025.12 event : fritarias // venue : amparo // city : porto<br>
-        <details>
+    <span class="link-line">
+      <a href="https://www.youtube.com/watch?v=36JI7YBuRKM&feature=youtu.be" target="_blank">video</a>
+    </span> 
+    <details>
       <summary>fotografias</summary>
         <img src="images/amparo1.1.png" alt="amparo1, Porto">
         <img src="images/amparo2.jpg" alt="amparo2, Porto">
