Fix HTML link formatting in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <br><br><br><br>
   2025.06 venue : hotelier // city : porto<br>
    <span class="link-line">
-      <a href="https://www.youtube.com/watch?v=36JI7YBuRKM&feature=youtu.be" target="_blank">video</a>
+      <a href="https://www.youtube.com/watch?v=36JI7YBuRKM&feature=youtu.be">video</a>
     </span> 
 </p>
 
