--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <br><br><br><br>
   2025.06 event : luca // venue : hotelier // city : porto<br>
    <span class="link-line">
-      <a href="https://youtu.be/riHMA5TGkZA">video</a>
+      <a href="https://youtu.be/riHMA5TGkZA" target="_blank>video</a>
     </span> 
 </p>
 
