Add video and image details to index.html

--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
       <span class="link-line">
       <a href="https://nigthshiftday.github.io/thefirsttimeyousawabutterfly/">camera didn't record :(</a>
       </span>
+      <details>
+      <summary>video</summary>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/sihaunQDzCw?si=JGyTysiYCr9MaaE-"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+    </details>
 </p>
 
 <p>  
@@ -71,8 +83,8 @@
       <details>
       <summary>fotografias</summary>
         <img src="images/rca1.jpg" alt="rca1, Porto">
-        <img src="images/rca2.jpg" alt="rca1, Porto">
         <img src="images/rca3.jpg" alt="rca1, Porto">
+        <img src="images/rca2.jpg" alt="rca1, Porto">
     </details>
 </p>
   
