Change YouTube video source and add details section
Updated the YouTube video source and added a details section for the video.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <iframe
           width="560"
           height="315"
-          src="https://www.youtube.com/embed/sihaunQDzCw?si=JGyTysiYCr9MaaE-"
+          src="https://www.youtube.com/embed/riHMA5TGkZA?si=gmqHtjGk5LrucjC8"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -97,7 +97,18 @@
 <p>
   2025.12 event : fritarias // venue : amparo // city : porto<br>
     <span class="link-line">
-      <a href="https://youtu.be/sihaunQDzCw" target="_blank">video</a>
+      <details>
+        <summary>video</summary>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/sihaunQDzCw?si=JGyTysiYCr9MaaE-"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+      </details>
     </span> 
     <details>
       <summary>fotografias</summary>
