Update another butterfly index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     #loader {
       position: fixed;
       inset: 0;
-      background: #f7f7f5;
+      background: black;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -117,13 +117,13 @@
 <body>
 
   <!-- Butterfly loader -->
-  <div id="loader">
-    <div class="butterfly">
-      <div class="wing left"></div>
-      <div class="wing right"></div>
-      <div class="body"></div>
-    </div>
-  </div>
+<div id="loader">
+  <img
+    src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExbzh5ZmgxemgxMHowcHNpanN0YTk1dHl3bmFkd2V4YnA1b2JnZ2NtZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/OreKkqmHu1m6Y/giphy.gif"
+    alt="Loading..."
+    style="width:120px; height:auto; display:block;"
+  >
+</div>
 
 <p>
   <i>this is : the first time you saw a butterfly</i>
