Update backgorund loading and time of butterfly index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     #loader {
       position: fixed;
       inset: 0;
-      background: black;
+      background: #01010c;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -203,7 +203,7 @@
     // optional: remove from DOM after fade
     setTimeout(function () {
       loader.style.display = 'none';
-    }, 600); // slightly longer than CSS transition
+    }, 1200); // slightly longer than CSS transition
   });
 </script>
 
