--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
       inset: 0;
       background: #01010c;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      justify-content: flex-start;  /* left instead of center */
+      align-items: flex-start;      /* top instead of center */
+      padding: 40px;   
       z-index: 9999;
       transition: opacity 0.5s ease;
     }
