Intro index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,21 @@
 
 <p>
   <i>this is : the first time you saw a butterfly</i>
-  <br><br><br><br>
+     <span class="link-line">
+      <details open>
+        <summary>have we ever apoligized to pigeons?</summary>
+        <video
+        src="butterflyPigeons.mp4" 
+        autoplay
+        loop
+        muted
+        playsinline
+        style="max-width:100%; height:auto; display:block;">
+        </video>
+      </details>
+    </span> 
+  <br><br>
+  <br><br>
   2025.06 event : luca // venue : hotelier // city : porto<br>
    <span class="link-line">
       <details>
