second video update index.html

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
 <p>
   <i>this is : the first time you saw a butterfly</i>
+</p>
      <span class="link-line">
       <details open>
         <summary>have we ever apoligized to pigeons?</summary>
@@ -151,9 +152,24 @@
         <button onclick="toggleMute('weLie')" style="font-size:0.7rem; margin-top:4px;">
           🔊 Unmute
         </button>
-    </details>
-  
-</p>
+      </details>
+      <details>
+        <summary>we lie to ourselves</summary>
+        <video
+          id="weOnlyItch"
+          src="Media/weOnlyItch.MP4"
+          autoplay
+          loop
+          muted
+          playsinline
+        >
+        </video>
+
+        <button onclick="toggleMute('weOnlyItch')" style="font-size:0.7rem; margin-top:4px;">
+          🔊 Unmute
+        </button>
+      </details>
+
   <br><br>
   <br><br>
 <p>  
